# digital-design

./: change_fig.sh  gvv-book.sty  main.tex
STM32F103C8T6/: main.elf
STM32F103C8T6/examples/: Makefile  main_bkup.c
STM32F103C8T6/examples/adc/: test.py
STM32F103C8T6/examples/gpio/: gpio_example.c
STM32F103C8T6/refs/: tinker.txt
STM32F103C8T6/src/: main.c
assembly/: problems.tex
assembly/7447/count/: main.tex
assembly/setup/: main.tex
avr-gcc/lcd/: main.tex
esp32/: main.tex
esp32/ide/7447/: main.tex
esp32/ide/7474/: main.tex
esp32/ide/sevenseg/: main.tex
gate/2024/42/: fig.tex
ide/7447/: main.tex  problems.tex
ide/7447/figs/: ip_7447_ard.tex
ide/7474/: main.tex  problems.tex
ide/dontcare/: main.tex
ide/fsm/: main.tex  problems.tex
ide/kmap/: main.tex  problems.tex
ide/lcd/: main.tex
ide/sevenseg/: main.tex
installation/: main.tex
pico/arm/codes/setup/onoff/: CMakeLists.txt  main.c
pico/arm/setup/: main.tex
pico/arm/sevenseg/: pico_sevenseg_hindi.tex  pico_sevenseg_hindi.tex~
pico/installation/: termux_arch.txt~  termux_ubuntu.txt  termuxarch.txt~
pico/pico-examples/blink/: CMakeLists.txt
stm32/adc/: main.tex
stm32/adc/figs/: pin_channel.tex  pin_channel.xlsx
stm32/ardsetup/: main.tex
stm32/ardsetup/codes/: platformio.ini
stm32/clocks/: main.tex
stm32/gpio/: main.tex
stm32/lcd/: main.tex
stm32/setup/: main.tex
stm32/sevenseg/: main.tex
stm32/sevenseg/figs/: stm_ssd.tex
stm32/timers/: main.tex
vaman/arm/setup/: main.tex
vaman/esp32/setup/: main.tex
vaman/uart/: main.tex
(+75 files in other folders)
